Divide the page into four components
Divide the page into four equally sized components with different colors.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
     <body>
         <div class="container">
-            <div style="background: Blue;">Child 1</div>
-            <div style="background: red;">Child 2</div>
+            <div style="background: blue;">Component 1</div>
+            <div style="background: red;">Component 2</div>
+            <div style="background: yellow;">Component 3</div>
+            <div style="background: green;">Component 4</div>
         </div>
     </body>
 </html>
