Change the colors of the quadrants
Change the colors of the quadrants to more pleasing shades of blue.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div class="container">
-            <div style="background: blue;">Component 1</div>
-            <div style="background: red;">Component 2</div>
-            <div style="background: yellow;">Component 3</div>
-            <div style="background: green;">Component 4</div>
+            <div style="background: rgb(0, 0, 252);">Component 1</div>
+            <div style="background: rgb(40, 128, 192);">Component 2</div>
+            <div style="background: rgb(3, 6, 97);">Component 3</div>
+            <div style="background: rgb(4, 5, 68);">Component 4</div>
         </div>
     </body>
 </html>
