Create new CSS class for quadrant titles

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <body>
         <div class="container">
             <div style="background: rgb(0, 0, 252); display: grid; justify-content: center; align-content: center;">
-                <h1 style="color:aliceblue">Create New Term</h1>
+                <h1 class="quad-title">Create New Term</h1>
             </div>
             <div style="background: rgb(40, 128, 192); display: grid; justify-content: center; align-content: center;">
-                <h1 style="color:aliceblue">View Term</h1>
+                <h1 class="quad-title">View Term</h1>
             </div>
             <div style="background: rgb(3, 6, 97); display: grid; justify-content: center; align-content: center;">
-                <h1 style="color:aliceblue">Modify Term</h1>
+                <h1 class="quad-title">Modify Term</h1>
             </div>
             <div style="background: rgb(4, 5, 68); display: grid; justify-content: center; align-content: center;">
-                <h1 style="color:aliceblue">Delete Term</h1>
+                <h1 class="quad-title">Delete Term</h1>
             </div>
         </div>
     </body>
