Refactor index.html by making new div class
Remove the long div styles by making a new div class called "quad" which contains all of the centering code. Change the color of each child individually.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     </head>
     <body>
         <div class="container">
-            <div style="background: rgb(0, 0, 252); display: grid; justify-content: center; align-content: center;">
+            <div class="quad">
                 <h1 class="quad-title">Create New Term</h1>
             </div>
-            <div style="background: rgb(40, 128, 192); display: grid; justify-content: center; align-content: center;">
+            <div class="quad">
                 <h1 class="quad-title">View Term</h1>
             </div>
-            <div style="background: rgb(3, 6, 97); display: grid; justify-content: center; align-content: center;">
+            <div class="quad">
                 <h1 class="quad-title">Modify Term</h1>
             </div>
-            <div style="background: rgb(4, 5, 68); display: grid; justify-content: center; align-content: center;">
+            <div class="quad">
                 <h1 class="quad-title">Delete Term</h1>
             </div>
         </div>
