Add basic click functionality for each quadrant

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     </head>
     <body>
         <div class="container">
-            <div class="quad">
+            <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">Create New Term</h1>
             </div>
-            <div class="quad">
+            <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">View Term</h1>
             </div>
-            <div class="quad">
+            <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">Modify Term</h1>
             </div>
-            <div class="quad">
+            <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">Delete Term</h1>
             </div>
         </div>
