Create basic table functionality

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>app-trakr</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
         <div class="container">
-            <div class="quad" onclick="location.href='#';">
+            <div class="quad" onclick="location.href='term.html';">
                 <h1 class="quad-title">Create New Term</h1>
             </div>
             <div class="quad" onclick="location.href='#';">
-                <h1 class="quad-title">View Term</h1>
+                <h1 class="quad-title">View Terms</h1>
             </div>
             <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">Modify Term</h1>
