--- a/term.html
+++ b/term.html
@@ -8,7 +8,31 @@
         <link rel="stylesheet" href="styles/term-style.css">
     </head>
     <body>
-        <label for="Term">Term:</label>
+        <label for="Term" class="term-label">Term:  </label>
         <input type="text" placeholder="Enter Term">
+        <table class= "content-table">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Company</th>
+                    <th>Position</th>
+                    <th>Date Applied</th>
+                    <th>Time Applied</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Amazon</td>
+                    <td>SWE</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Facebook</td>
+                    <td>SWE</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
