--- a/term.html
+++ b/term.html
@@ -10,6 +10,7 @@
     <body>
         <label for="Term" class="term-label">Term:  </label>
         <input type="text" placeholder="Enter Term">
+
         <table class= "content-table">
             <thead>
                 <tr>
@@ -34,5 +35,12 @@
                 </tr>
             </tbody>
         </table>
+
+        <button type="button">Add new appliactions</button> 
+        <div class="popup" onclick="myFunction()">Click me!
+            <span class="popuptext" id="myPopup">Popup text...</span>
+          </div> 
     </body>
+
+    <script src="js/term.js"></script> 
 </html>
