--- a/term.html
+++ b/term.html
@@ -6,8 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Term</title>
         <link rel="stylesheet" href="styles/term-style.css">
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
     <body>
+        <p>Icon buttons:</p>
+        <button class="btn"><i class="fa fa-home"></i></button>
+        <button class="btn"><i class="fa fa-bars"></i></button>
+        <button class="btn"><i class="fa fa-trash"></i></button>
+        <button class="btn"><i class="fa fa-close"></i></button>
+        <button class="btn"><i class="fa fa-folder"></i></button>
+
+        <p>Icon buttons with text:</p>
+        <button class="btn"><i class="fa fa-home"></i> Home</button>
+        <button class="btn"><i class="fa fa-bars"></i> Menu</button>
+        <button class="btn"><i class="fa fa-trash"></i> Trash</button>
+        <button class="btn"><i class="fa fa-close"></i> Close</button>
+        <button class="btn"><i class="fa fa-folder"></i> Folder</button>
         <label for="Term" class="term-label">Term:  </label>
         <input type="text" placeholder="Enter Term">
 
@@ -37,9 +53,9 @@
         </table>
 
         <button type="button">Add new appliactions</button> 
-        <div class="popup" onclick="myFunction()">Click me!
+        <!-- <div class="popup" onclick="myFunction()">Click me!
             <span class="popuptext" id="myPopup">Popup text...</span>
-          </div> 
+          </div>  -->
     </body>
 
     <script src="js/term.js"></script> 
