Update titles of each quadrant

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <body>
         <div class="container">
             <div class="quad" onclick="location.href='term.html';">
-                <h1 class="quad-title">Create New Term</h1>
+                <h1 class="quad-title">Create Term</h1>
             </div>
             <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">View Terms</h1>
             </div>
             <div class="quad" onclick="location.href='#';">
-                <h1 class="quad-title">Modify Term</h1>
+                <h1 class="quad-title">Upload Term</h1>
             </div>
             <div class="quad" onclick="location.href='#';">
                 <h1 class="quad-title">Delete Term</h1>
