Add JavaScript functionality to update table

--- a/term.html
+++ b/term.html
@@ -23,27 +23,49 @@
             <input type="text" placeholder="Enter Term (Eg. Spring 2023)">
 
             <!-- Table -->
-            <table class= "content-table">
+            <table class= "content-table" id = "table">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Company</th>
-                        <th>Position</th>
-                        <th>Date Applied</th>
-                        <th>Time Applied</th>
-                        <th>Status</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Amazon</td>
-                        <td>SWE</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>2</td>
-                        <td>Facebook</td>
-                        <td>SWE</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
