Add functionality to populate table via popup form

--- a/term.html
+++ b/term.html
@@ -69,14 +69,14 @@
                 </div>
                 <div class="form-element">
                     <label for="position">Position: </label>
-                    <input type="text" id="company-name" placeholder="Enter position name">
+                    <input type="text" id="position-name" placeholder="Enter position name">
                 </div>
                 <div class="form-element">
                     <label for="autofill-date-time">Autofill date and time: </label>
                     <input type="checkbox" id="autofill-date-time">
                 </div>
                 <div class="form-element">
-                    <button class="enter-btn" onclick="addApps()">Enter</button>
+                    <button class="enter-btn" id="enter-btn" onclick="addApps()">Enter</button>
                 </div>
             </div>
         </div> <!-- End Add Applications Button Form Logic -->
