Add undo button styling
Create an undo button right next to the add button. The button is currently blank. Undo logo or text to be added later on.

--- a/term.html
+++ b/term.html
@@ -80,7 +80,10 @@
                 </div>
             </div>
         </div> <!-- End Add Applications Button Form Logic -->
-        <div class="plus radius" id="add-app"></div>
+        <div class="plus-btn" id="add-app"></div>
+        <div class="undo-btn">
+            
+        </div>
     </body>
 
     <script src="js/term.js"></script> 
