Add overlay for popup

--- a/term.html
+++ b/term.html
@@ -79,11 +79,11 @@
                     <button class="enter-btn" id="enter-btn" onclick="addApps()">Enter</button>
                 </div>
             </div>
-        </div> <!-- End Add Applications Button Form Logic -->
+        </div> 
+        <!-- End Add Applications Button Form Logic -->
         <div class="plus-btn" id="add-app"></div>
-        <div class="undo-btn">
-            
-        </div>
+        <div class="undo-btn" onclick="deleteLatestEntry()"></div>
+        <div id="overlay"></div>
     </body>
 
     <script src="js/term.js"></script> 
