--- a/term.html
+++ b/term.html
@@ -68,7 +68,11 @@
         <!-- End Add Applications Button Form Logic -->
         <div class="plus-btn" id="add-app"></div>
         <div class="undo-btn" onclick="deleteLatestEntry()"></div>
+        <!-- <button class="undo-btn-change" onclick="deleteLatestEntry()"><i class='fa fa-undo'></i></button> -->
         <div id="overlay"></div>
+
+        <!-- Download Button -->
+       <div> <button class="download-btn"><i class="fa fa-download"></i></button></div>
     </body>
 
     <script src="js/term.js"></script> 
