--- a/term.html
+++ b/term.html
@@ -20,7 +20,7 @@
             
              <!-- Term Label -->
             <label for="Term" class="term-label">Term:  </label>
-            <input type="text" placeholder="Enter Term (Eg. Spring 2023)">
+            <input type="text" id="term" placeholder="Enter Term (Eg. Spring 2023)">
 
             <!-- Table -->
             <table class= "content-table" id = "table">
@@ -67,12 +67,12 @@
         </div> 
         <!-- End Add Applications Button Form Logic -->
         <div class="plus-btn" id="add-app"></div>
-        <div class="undo-btn" onclick="deleteLatestEntry()"></div>
-        <!-- <button class="undo-btn-change" onclick="deleteLatestEntry()"><i class='fa fa-undo'></i></button> -->
+        <!-- <div class="undo-btn" onclick="deleteLatestEntry()"></div> -->
+        <div><button class="undo-btn-change" onclick="deleteLatestEntry()"><i class='fa fa-undo'></i></button></div>
         <div id="overlay"></div>
 
         <!-- Download Button -->
-       <div> <button class="download-btn"><i class="fa fa-download"></i></button></div>
+       <div> <button class="download-btn" onclick="htmlToCsv()"><i class="fa fa-download"></i></button></div>
     </body>
 
     <script src="js/term.js"></script> 
