--- a/term.html
+++ b/term.html
@@ -24,17 +24,7 @@
 
             <!-- Table -->
             <table class= "content-table" id = "table">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Company</th>
-                        <th>Position</th>
-                        <th>Date Applied</th>
-                        <th>Time Applied</th>
-                        <th>Status</th>
-                        <th></th>
-                    </tr>
-                </thead>
+                <thead></thead>
                 <tbody></tbody>
             </table>
 
