--- a/term.html
+++ b/term.html
@@ -62,7 +62,9 @@
         <div id="overlay"></div>
 
         <!-- Download Button -->
-       <div> <button class="download-btn" onclick="htmlToCsv()"><i class="fa fa-download"></i></button></div>
+        <div> <button class="download-btn" onclick="htmlToCsv()"><i class="fa fa-download"></i></button></div>
+        <!-- File Uploader -->
+        <input type="file" accept=".csv" id="uploader" class="uploader">
     </body>
 
     <script src="js/term.js"></script> 
