Fix typo in applications

--- a/term.html
+++ b/term.html
@@ -30,7 +30,7 @@
 
         </div>  <!-- Begin Add Applications Button Form Logic -->
 
-        <!-- <button id="add-app">Add new appliactions</button> Button -->
+        <!-- <button id="add-app">Add new applications</button> Button -->
 
         <div class="popup-form"> <!-- Actual Form-->
 
