Add label to display total # of applications

--- a/term.html
+++ b/term.html
@@ -21,7 +21,8 @@
              <!-- Term Label -->
             <label for="Term" class="term-label">Term:  </label>
             <input type="text" id="term" placeholder="Enter Term (Eg. Spring 2023)">
-
+            
+            <label for="# of Applications" id="num-apps" class="num-apps-label"></label>
             <!-- Table -->
             <table class= "content-table" id = "table">
                 <thead></thead>
