--- a/term.html
+++ b/term.html
@@ -57,30 +57,26 @@
             </div>
         </div> 
         <!-- End Add Applications Button Form Logic -->
-<!--        <div id="overlay"></div>-->
 
         <div class="btn-container">
+
+            <!-- Add Application Button-->
             <div class="plus-btn" id="add-app"></div>
+
+            <!-- Undo Button-->
             <div><button class="undo-btn-change" onclick="deleteLatestEntry()"><i class='fa fa-undo'></i></button></div>
-<!--            <div id="overlay"></div>-->
 
             <!-- Download Button -->
-            <div> <button class="download-btn" onclick="htmlToCsv()"><i class="fa fa-download"></i></button></div>
+            <div><button class="download-btn" onclick="htmlToCsv()"><i class="fa fa-download"></i></button></div>
 
             <!-- Edit Button-->
-            <div>
-                <button class="edit-btn" onclick="makeEditable()">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="44" height="44" viewBox="0 icon-tabler-edit" width="44" height="44" viewBox="0 0 240 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>   <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
-                        <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
-                        <line x1="16" y1="5" x2="19" y2="8" />
-                    </svg>
-                </button>
-            </div>
+            <div><button class="edit-btn" onclick="makeEditable()" id="edit-btn"><i class="fa fa-edit"></i></button></div>
+
             <!-- File Uploader -->
             <input type="file" accept=".csv" id="uploader" class="uploader">
         </div>
-        
+
+        <!-- Make sure this remains on the very bottom-->
         <div id="overlay"></div>
     </body>
 
