Add styling for upload button

--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
             <div class="form">
                 <h2>Select table headers</h2>
                 <div class="form-element">
-                    <label for="Company">Company: </label>
+                    <label for="company-checkbox">Company: </label>
                     <input type="checkbox" id="company-checkbox" name="Company">
                 </div>
                 <div class="form-element">
-                    <label for="Position">Position: </label>
+                    <label for="position-checkbox">Position: </label>
                     <input type="checkbox" id="position-checkbox" name="Position">
                 </div>
                 <div class="form-element">
-                    <label for="Date Applied">Date Applied: </label>
+                    <label for="date-applied-checkbox">Date Applied: </label>
                     <input type="checkbox" id="date-applied-checkbox" name="Date Applied">
                 </div>
                 <div class="form-element">
-                    <label for="Time Applied">Time Applied: </label>
+                    <label for="time-applied-checkbox">Time Applied: </label>
                     <input type="checkbox" id="time-applied-checkbox" name="Time Applied">
                 </div>
                 <div class="form-element">
-                    <label for="Status">Status: </label>
+                    <label for="status-checkbox">Status: </label>
                     <input type="checkbox" id="status-checkbox" name="Status">
                 </div>
                 <div class="form-element">
