--- a/term.html
+++ b/term.html
@@ -66,8 +66,10 @@
             <!-- Analytics Button -->
             <div><button class="analytics-btn" onclick="displayAnalyticsPopup()"><i class="fa fa-bar-chart"></i></button></div>
 
+            <!-- Upload Button -->
+            <div><button class="upload-btn" onclick="document.getElementById('uploader').click()"><i class="fa fa-upload"></i></button></div>
             <!-- File Uploader -->
-            <input type="file" accept=".csv" id="uploader" class="uploader">
+            <input type="file" accept=".csv" id="uploader" class="uploader" style="display: none">
         </div>
 
         <div class="analytics-popup">
